add scripts to make online dfs webpage working